# llvm_course

./: .gitignore  CMakeLists.txt  README.md
SDL/: CMakeLists.txt  app.c  app.ll  sim.c  sim.h  utils.c
llvm_pass/: README.md  generate_graph.py  llvm_pass.cpp  stats_getter.cpp
